# mcp-documentation-server

./: .gitignore  README.md  pyproject.toml  requirements.txt
client/: package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: LeftPanelContent.tsx  RightPanelContent.tsx  app-sidebar.tsx  collapsible-panels.tsx  panel-context.tsx
client/src/components/ui/: sidebar.tsx
client/src/lib/: mcp-client.ts  mcp-types.ts
server/: .gitignore  README.md  pyproject.toml  pyrightconfig.json
server/src/: __init__.py  server.py
server/src/core/: __init__.py  embedding.py  indexing.py
server/src/lib/: __init__.py  config.py  errors.py  utils.py
server/src/storage/: collection_manager.py  document_index.py  document_store.py  vector_store.py
src/: server.py
src/core/: chunking.py  document_manager.py  embedding.py  extraction.py
src/lib/: __init__.py  config.py  models.py
src/retrieval/: __init__.py  search.py
src/storage/: __init__.py  collection_manager.py  document_index.py
