[project]
name = "mcp-doc-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=2.13.3",
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/node_modules", "**/.venv", "**/venv"]
typeCheckingMode = "basic"
reportMissingImports = true

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''
